mod: fish tuning

--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -10,9 +10,11 @@
         "btype",
         "cheby",
         "Cliping",
+        "CPPFLAGS",
         "cuda",
         "dioption",
         "dnntts",
+        "doas",
         "downsampling",
         "finfo",
         "firwin",
