add: spell check words

--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -36,6 +36,7 @@
         "nepochs",
         "nnmnkwii",
         "noisereduce",
+        "numpy",
         "omegaconf",
         "PYPI",
         "pyproject",
@@ -43,6 +44,7 @@
         "quantile",
         "rfft",
         "rfftfreq",
+        "scipy",
         "setuptools",
         "sosfilt",
         "soundfile",
