--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,18 +2,43 @@
     "cSpell.words": [
         "amdgpu",
         "atcoder",
+        "bmalehorn",
+        "CEINTL",
         "coreutils",
+        "debugpy",
+        "dotglob",
+        "eamodio",
+        "errorlens",
         "gnubin",
+        "isort",
+        "janisdd",
         "libexec",
+        "lucario",
+        "mechatroner",
+        "mypy",
         "nodesktop",
+        "nullglob",
+        "oderwat",
+        "Orhun",
+        "pixl",
+        "praatvscode",
         "pyenv",
+        "ritwickdey",
         "rocm",
         "shellenv",
+        "shengchen",
+        "tamasfe",
         "targz",
+        "tomoki",
+        "toolsai",
+        "Ulusahin",
         "untargz",
+        "usernamehw",
+        "vimrc",
         "WINEARCH",
         "wineboot",
         "winetricks",
+        "wmanth",
         "zcvf",
         "zxvf"
     ]
