add: cspell words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,14 @@
     "cSpell.words": [
         "amdgpu",
         "atcoder",
+        "autofetch",
         "bmalehorn",
+        "bongocat",
         "CEINTL",
         "coreutils",
         "debugpy",
+        "donot",
+        "dont",
         "dotglob",
         "eamodio",
         "errorlens",
@@ -15,6 +19,8 @@
         "libexec",
         "lucario",
         "mechatroner",
+        "Menlo",
+        "mlapp",
         "mypy",
         "nodesktop",
         "nullglob",
@@ -35,6 +41,7 @@
         "untargz",
         "usernamehw",
         "vimrc",
+        "vsicons",
         "WINEARCH",
         "wineboot",
         "winetricks",
