--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -1,9 +1,8 @@
 {
-    "workbench.startupEditor": "none",
-    "workbench.iconTheme": "vscode-icons",
-    "git.autofetch": true,
-    "vsicons.dontShowNewVersionMessage": true,
-    "git.confirmSync": false,
+    "[python]": {
+        "editor.formatOnType": true
+    },
+    "cSpell.customDictionaries": {},
     "cSpell.userWords": [
         "astype",
         "bandpass",
@@ -61,49 +60,50 @@
         "vsed",
         "xfce"
     ],
-    "liveServer.settings.donotVerifyTags": true,
-    "editor.fontSize": 15,
-    "editor.fontFamily": "JetBrains Mono, Menlo, Monaco, 'Courier New', monospace",
-    "liveServer.settings.donotShowInfoMsg": true,
-    "cSpell.customDictionaries": {},
-    "editor.fontLigatures": true,
-    "files.associations": {
-        "CHANGELOG": "plaintext",
-        "*.bash": "shellscript"
-    },
-    "[python]": {
-        "editor.formatOnType": true
-    },
-    "git.openRepositoryInParentFolders": "always",
+    "csv-edit.readOption_hasHeader": "true",
+    "diffEditor.ignoreTrimWhitespace": false,
     "editor.detectIndentation": false,
-    "javascript.inlayHints.variableTypes.enabled": true,
+    "editor.fontFamily": "JetBrains Mono, Menlo, Monaco, 'Courier New', monospace",
+    "editor.fontLigatures": true,
+    "editor.fontSize": 15,
+    "editor.fontWeight": "bold",
+    "editor.formatOnSave": true,
+    "editor.inlayHints.enabled": "offUnlessPressed",
+    "editor.stickyScroll.enabled": true,
+    "editor.unicodeHighlight.invisibleCharacters": false,
+    "editor.unicodeHighlight.nonBasicASCII": true,
     "extensions.supportUntrustedWorkspaces": {},
+    "files.associations": {
+        "*.bash": "shellscript",
+        "CHANGELOG": "plaintext"
+    },
+    "files.insertFinalNewline": true,
+    "files.trimTrailingWhitespace": true,
+    "git.autofetch": true,
+    "git.confirmSync": false,
+    "git.openRepositoryInParentFolders": "always",
+    "git.replaceTagsWhenPull": true,
+    "gitlens.codeLens.enabled": false,
+    "java.checkstyle.configuration": "google_checks.xml",
+    "javascript.inlayHints.variableTypes.enabled": true,
+    "liveServer.settings.donotShowInfoMsg": true,
+    "liveServer.settings.donotVerifyTags": true,
+    "mypy-type-checker.showNotifications": "onError",
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv",
+    "redhat.telemetry.enabled": true,
+    "svg.preview.mode": "img",
+    "terminal.integrated.confirmOnExit": "hasChildProcesses",
+    "terminal.integrated.defaultProfile.linux": "fish",
+    "terminal.integrated.defaultProfile.osx": "fish",
     "terminal.integrated.fontSize": 14,
     "terminal.integrated.fontWeight": "bold",
-    "editor.fontWeight": "bold",
-    "java.checkstyle.configuration": "google_checks.xml",
-    "editor.stickyScroll.enabled": true,
+    "terminal.integrated.inheritEnv": false,
+    "vsicons.dontShowNewVersionMessage": true,
     "workbench.editorAssociations": {
         "*.lock": "default",
         "*.mlapp": "default"
     },
-    "editor.unicodeHighlight.invisibleCharacters": false,
-    "editor.inlayHints.enabled": "offUnlessPressed",
-    "redhat.telemetry.enabled": true,
-    "terminal.integrated.confirmOnExit": "hasChildProcesses",
-    "editor.unicodeHighlight.nonBasicASCII": true,
-    "csv-edit.readOption_hasHeader": "true",
-    "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true,
-    "mypy-type-checker.showNotifications": "onError",
-    "diffEditor.ignoreTrimWhitespace": false,
-    "git.replaceTagsWhenPull": true,
-    "svg.preview.mode": "img",
+    "workbench.iconTheme": "vscode-icons",
     "workbench.productIconTheme": "bongocat",
-    "gitlens.codeLens.enabled": false,
-    "terminal.integrated.defaultProfile.linux": "fish",
-    "terminal.integrated.defaultProfile.osx": "fish",
-    "terminal.integrated.inheritEnv": false,
-    "python.defaultInterpreterPath": "${workspaceFolder}/.venv",
-    "editor.formatOnSave": true
+    "workbench.startupEditor": "none"
 }
