--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "pyenv",
         "ritwickdey",
         "rocm",
+        "shellcheck",
         "shellenv",
         "shengchen",
         "tamasfe",
