add spellchecker word

--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -35,6 +35,7 @@
         "noisereduce",
         "numpy",
         "omegaconf",
+        "pipx",
         "PYPI",
         "pyproject",
         "Qiita",
