--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -80,6 +80,7 @@
     },
     "git.autofetch": true,
     "git.confirmSync": false,
+    "git.enableCommitSigning": true,
     "git.openRepositoryInParentFolders": "always",
     "git.replaceTagsWhenPull": true,
     "git.suggestSmartCommit": false,
