--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -101,6 +101,11 @@
     "terminal.integrated.fontSize": 14,
     "terminal.integrated.fontWeight": "bold",
     "terminal.integrated.inheritEnv": false,
+    "terminal.integrated.profiles.osx": {
+        "fish": {
+            "path": "/opt/homebrew/bin/fish"
+        }
+    },
     "vsicons.dontShowNewVersionMessage": true,
     "workbench.iconTheme": "vscode-icons",
     "workbench.productIconTheme": "bongocat",
