--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -65,6 +65,10 @@
     ],
     "csv-edit.readOption_hasHeader": "true",
     "diffEditor.ignoreTrimWhitespace": false,
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": "always",
+        "source.sort.json": "always"
+    },
     "editor.detectIndentation": false,
     "editor.fontFamily": "JetBrains Mono, Menlo, Monaco, 'Courier New', monospace",
     "editor.fontLigatures": true,
