mod font in vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "mlapp",
         "mypy",
         "nodesktop",
+        "Noto",
         "nullglob",
         "oderwat",
         "Orhun",
