--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -70,7 +70,7 @@
         "source.sort.json": "always"
     },
     "editor.detectIndentation": false,
-    "editor.fontFamily": "JetBrains Mono, Menlo, Monaco, 'Courier New', monospace",
+    "editor.fontFamily": "'JetBrains Mono', 'Noto Sans Mono CJK JP', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 15,
     "editor.fontWeight": "bold",
