update vscode config

--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -12,11 +12,11 @@
         "dnntts",
         "doas",
         "downsampling",
+        "filtfilt",
         "finfo",
         "firwin",
-        "Fumiyoshi",
-        "filtfilt",
         "freqs",
+        "Fumiyoshi",
         "irfft",
         "isort",
         "jfloatwavio",
@@ -53,6 +53,7 @@
         "Tacotron",
         "temurin",
         "tqdm",
+        "truncnorm",
         "ttslearn",
         "unsqueeze",
         "utternace",
@@ -115,6 +116,7 @@
             "path": "/opt/homebrew/bin/fish"
         }
     },
+    "update.showReleaseNotes": false,
     "vsicons.dontShowNewVersionMessage": true,
     "workbench.iconTheme": "vscode-icons",
     "workbench.productIconTheme": "bongocat",
