--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "amdgpu",
+        "apdisk",
         "atcoder",
         "autofetch",
         "bmalehorn",
@@ -9,11 +10,14 @@
         "coreutils",
         "debugpy",
         "donot",
+        "donotpresent",
         "dont",
         "dotglob",
         "eamodio",
         "errorlens",
+        "fseventsd",
         "gnubin",
+        "icns",
         "isort",
         "janisdd",
         "libexec",
@@ -37,6 +41,7 @@
         "shengchen",
         "tamasfe",
         "targz",
+        "timemachine",
         "tomoki",
         "toolsai",
         "Ulusahin",
