hide python cache

--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -95,6 +95,9 @@
         "*.bash": "shellscript",
         "CHANGELOG": "plaintext"
     },
+    "files.exclude": {
+        "**/__pycache__": true
+    },
     "files.insertFinalNewline": true,
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
