--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -74,8 +74,8 @@
         "source.sort.json": "always"
     },
     "editor.detectIndentation": true,
-    "editor.dragAndDrop": false,
-    "editor.fontFamily": "'JetBrains Mono', 'BIZ UDGothic', monospace",
+    "editor.dragAndDrop": false, //aaaあああ
+    "editor.fontFamily": "'JetBrains Mono','NotoSansJP-Thin_ExtraLight', 'BIZ UDGothic', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 15,
     "editor.fontWeight": "bold",
