--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -74,7 +74,7 @@
         "source.sort.json": "always"
     },
     "editor.detectIndentation": true,
-    "editor.dragAndDrop": false, //aaaあああ
+    "editor.dragAndDrop": false,
     "editor.fontFamily": "'JetBrains Mono','NotoSansJP-Thin_ExtraLight', 'BIZ UDGothic', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 15,
