--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -75,7 +75,7 @@
     },
     "editor.detectIndentation": true,
     "editor.dragAndDrop": false,
-    "editor.fontFamily": "'JetBrains Mono','NotoSansJP-Thin_ExtraLight', 'BIZ UDGothic', monospace",
+    "editor.fontFamily": "'JetBrains Mono', 'BIZ UDGothic', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 15,
     "editor.fontWeight": "bold",
