mod vecode config for git

--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -107,11 +107,14 @@
     "git.autofetch": true,
     "git.confirmSync": false,
     "git.enableCommitSigning": true,
+    "git.enableStatusBarSync": false,
     "git.openRepositoryInParentFolders": "always",
     "git.pruneOnFetch": true,
     "git.replaceTagsWhenPull": true,
     "git.suggestSmartCommit": false,
     "gitlens.codeLens.enabled": false,
+    "gitlens.graph.statusBar.enabled": false,
+    "gitlens.statusBar.enabled": false,
     "java.checkstyle.configuration": "google_checks.xml",
     "liveServer.settings.donotShowInfoMsg": true,
     "liveServer.settings.donotVerifyTags": true,
