--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -75,7 +75,7 @@
     },
     "editor.detectIndentation": true,
     "editor.dragAndDrop": false,
-    "editor.fontFamily": "'JetBrains Mono', 'TakaoExGothic', monospace",
+    "editor.fontFamily": "'JetBrainsMono Nerd Font', 'JetBrains Mono', 'TakaoExGothic', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 15,
     "editor.fontWeight": "bold",
