--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -1,5 +1,6 @@
 {
     "chat.disableAIFeatures": true,
+    "chatgpt.localeOverride": "ja-JP",
     "cSpell.userWords": [
         "astype",
         "axhline",
@@ -125,7 +126,7 @@
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv",
     "python.languageServer": "Jedi",
     "python.terminal.activateEnvironment": false,
-    "python.terminal.shellIntegration.enabled": false, // preview feature
+    "python.terminal.shellIntegration.enabled": false,
     "redhat.telemetry.enabled": true,
     "scm.alwaysShowRepositories": true,
     "svg.preview.mode": "img",
