--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -76,13 +76,14 @@
     },
     "editor.detectIndentation": true,
     "editor.dragAndDrop": false,
-    "editor.fontFamily": "'JetBrainsMono Nerd Font', 'JetBrains Mono', 'TakaoExGothic', monospace",
+    "editor.fontFamily": "'JetBrains Mono', 'TakaoExGothic', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 15,
     "editor.fontWeight": "bold",
     "editor.formatOnSave": true,
     "editor.guides.bracketPairs": true,
     "editor.inlayHints.enabled": "offUnlessPressed",
+    "editor.minimap.enabled": false,
     "editor.minimap.showSlider": "always",
     "editor.renderLineHighlight": "all",
     "editor.semanticHighlighting.enabled": false,
@@ -114,6 +115,7 @@
     "git.replaceTagsWhenPull": true,
     "git.suggestSmartCommit": false,
     "gitlens.codeLens.enabled": false,
+    "gitlens.currentLine.enabled": false,
     "gitlens.graph.statusBar.enabled": false,
     "gitlens.statusBar.enabled": false,
     "java.checkstyle.configuration": "google_checks.xml",
@@ -155,5 +157,6 @@
     "workbench.navigationControl.enabled": false,
     "workbench.productIconTheme": "bongocat",
     "workbench.startupEditor": "none",
-    "workbench.view.alwaysShowHeaderActions": true
+    "workbench.view.alwaysShowHeaderActions": true,
+    "editor.accessibilitySupport": "off"
 }
