--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -122,6 +122,12 @@
     "gitlens.graph.statusBar.enabled": false,
     "gitlens.statusBar.enabled": false,
     "java.checkstyle.configuration": "google_checks.xml",
+    "latex-workshop.docker.enabled": true,
+    "latex-workshop.docker.image.latex": "docker.io/texlive/texlive:TL2024-historic",
+    "latex-workshop.docker.path": "podman",
+    "latex-workshop.latex.autoBuild.run": "onSave",
+    "latex-workshop.latex.outDir": "build",
+    "latex-workshop.latex.recipe.default": "latexmk (latexmkrc)",
     "liveServer.settings.donotShowInfoMsg": true,
     "liveServer.settings.donotVerifyTags": true,
     "mypy-type-checker.args": [
