--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -20,11 +20,15 @@
         "axhline",
         "bandpass",
         "btype",
+        "cepstrum",
         "cheby",
+        "Chebyshev",
         "checkstyle",
+        "CHUGOKU",
         "Cliping",
         "CPPFLAGS",
         "cuda",
+        "denoised",
         "dioption",
         "dnntts",
         "doas",
@@ -34,8 +38,10 @@
         "firwin",
         "freqs",
         "Fumiyoshi",
+        "IEICE",
         "irfft",
         "isort",
+        "Itako",
         "jfloatwavio",
         "Koguchi",
         "lfilter",
@@ -43,9 +49,11 @@
         "LMDE",
         "MATANO",
         "matplotlib",
+        "Metan",
         "MONOPHONE",
         "Morise",
         "mreccorpus",
+        "Multimodal",
         "mypy",
         "nbit",
         "nbits",
@@ -55,32 +63,43 @@
         "noisereduce",
         "numpy",
         "omegaconf",
+        "Parler",
+        "pdflatex",
         "pipx",
+        "Pnet",
         "PYPI",
         "pyproject",
         "Qiita",
         "quantile",
         "rfft",
         "rfftfreq",
+        "RMSE",
+        "SATEN",
         "scipy",
         "setuptools",
+        "Silero",
         "sosfilt",
         "soundfile",
         "soxr",
         "Tacotron",
         "temurin",
+        "thresholding",
+        "TOHOKU",
         "tqdm",
         "truncnorm",
         "ttslearn",
         "unsqueeze",
+        "Usagi",
         "utternace",
         "venv",
         "VIRTUALENV",
+        "VSED",
         "xfce",
         "xlabel",
         "xlim",
         "ylabel",
-        "ylim"
+        "ylim",
+        "ZUNDAMON"
     ],
     "csv-edit.readOption_hasHeader": "true",
     "diffEditor.ignoreTrimWhitespace": false,
