--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -15,92 +15,7 @@
     "chat.disableAIFeatures": true,
     "chatgpt.localeOverride": "ja-JP",
     "chatgpt.openOnStartup": true,
-    "cSpell.userWords": [
-        "astype",
-        "axhline",
-        "bandpass",
-        "btype",
-        "cepstrum",
-        "cheby",
-        "Chebyshev",
-        "checkstyle",
-        "CHUGOKU",
-        "Cliping",
-        "CPPFLAGS",
-        "cuda",
-        "denoised",
-        "dioption",
-        "dnntts",
-        "doas",
-        "downsampling",
-        "filtfilt",
-        "finfo",
-        "firwin",
-        "freqs",
-        "Fumiyoshi",
-        "IEICE",
-        "irfft",
-        "isort",
-        "Itako",
-        "jfloatwavio",
-        "Koguchi",
-        "lfilter",
-        "librosa",
-        "LMDE",
-        "MATANO",
-        "matplotlib",
-        "Metan",
-        "MONOPHONE",
-        "Morise",
-        "mreccorpus",
-        "Multimodal",
-        "mypy",
-        "nbit",
-        "nbits",
-        "ndarray",
-        "nepochs",
-        "nnmnkwii",
-        "noisereduce",
-        "numpy",
-        "omegaconf",
-        "Parler",
-        "pdflatex",
-        "pipx",
-        "Pnet",
-        "PYPI",
-        "pyproject",
-        "Qiita",
-        "quantile",
-        "rfft",
-        "rfftfreq",
-        "RMSE",
-        "SATEN",
-        "scipy",
-        "setuptools",
-        "Silero",
-        "sosfilt",
-        "soundfile",
-        "soxr",
-        "Tacotron",
-        "temurin",
-        "thresholding",
-        "TOHOKU",
-        "tqdm",
-        "truncnorm",
-        "ttslearn",
-        "unsqueeze",
-        "Usagi",
-        "utternace",
-        "venv",
-        "VIRTUALENV",
-        "VSED",
-        "xfce",
-        "xlabel",
-        "xlim",
-        "ylabel",
-        "ylim",
-        "ZUNDAMON"
-    ],
+    "cSpell.configFile": "${userHome}/.config/cspell.json",
     "csv-edit.readOption_hasHeader": "true",
     "diffEditor.ignoreTrimWhitespace": false,
     "editor.accessibilitySupport": "off",
