--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,4 +9,4 @@ lint:
   script:
     - apk add stow
     - shellcheck setup_codium.bash
-    - stow -nv codex fish git xfce xmodmap
+    - xargs -a stow_targets.txt stow -nv
