--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -18,6 +18,7 @@
     "chatgpt.openOnStartup": true,
     "cSpell.showAutocompleteDirectiveSuggestions": false,
     "csv-edit.readOption_hasHeader": "true",
+    "diffEditor.experimental.useTrueInlineView": true,
     "diffEditor.ignoreTrimWhitespace": false,
     "editor.accessibilitySupport": "off",
     "editor.codeActionsOnSave": {
@@ -32,16 +33,18 @@
     "editor.fontWeight": "bold",
     "editor.formatOnSave": true,
     "editor.guides.bracketPairs": true,
-    "editor.inlayHints.enabled": "offUnlessPressed",
+    "editor.inlayHints.enabled": "off",
     "editor.minimap.enabled": false,
-    "editor.minimap.showSlider": "always",
     "editor.renderLineHighlight": "all",
+    "editor.renderWhitespace": "all",
     "editor.showFoldingControls": "always",
+    "editor.smoothScrolling": true,
     "editor.stickyScroll.enabled": true,
     "editor.unicodeHighlight.nonBasicASCII": true,
     "editor.wordSegmenterLocales": [
         "ja"
     ],
+    "editor.wrappingIndent": "indent",
     "files.associations": {
         ".gitconfig_local": "properties",
         "*.bash": "shellscript",
@@ -53,7 +56,7 @@
     "files.insertFinalNewline": true,
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
-    "git.autofetch": true,
+    "git.autofetch": "all",
     "git.confirmSync": false,
     "git.enableCommitSigning": true,
     "git.enableStatusBarSync": false,
@@ -85,6 +88,7 @@
     "python.terminal.shellIntegration.enabled": false,
     "redhat.telemetry.enabled": true,
     "scm.alwaysShowRepositories": true,
+    "scm.defaultViewMode": "tree",
     "svg.preview.mode": "img",
     "terminal.integrated.confirmOnExit": "hasChildProcesses",
     "terminal.integrated.defaultProfile.linux": "fish",
